--- a/src/PeruShopHub.Web/src/app/pages/categories/variation-fields.component.scss
+++ b/src/PeruShopHub.Web/src/app/pages/categories/variation-fields.component.scss
@@ -47,6 +47,10 @@
 
 .variation-fields__section {
   margin-bottom: var(--space-4);
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .variation-fields__section-label {
